Task description to task and auto-migrate from previous Task model / add task button moved to trailing

--- a/Dayloop/Info.plist
+++ b/Dayloop/Info.plist
@@ -47,6 +47,7 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 		<string>UIInterfaceOrientationLandscapeLeft</string>
+		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UISupportedInterfaceOrientations~ipad</key>
